2007-01-22  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/WidgetDesigner.cs: Avoid disposing twice the designer.

2007-01-22  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/ApplicationBackend.cs, libsteticui/ProjectBackend.cs,
	  libsteticui/Application.cs: Fixed problem when updating project
	  libraries. Make sure referenced libraries are not unloaded when
	  they are still needed.
	* libsteticui/CecilWidgetLibrary.cs: Null check.

2007-01-22  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/ActionGroupDesigner.cs, libsteticui/ProjectView.cs,
	  libsteticui/SignalsEditor.cs, libsteticui/PluggableWidget.cs: Some
	  protection to avoid dispatching some events after the object has
	  been disposed.
	* libsteticui/ApplicationBackend.cs: Changed the way libraries are
	  loaded. If a library has dependencies, the dependencies are loaded
	  first.
	* libsteticui/CecilSignalDescriptor.cs,
	  libsteticui/CecilPropertyDescriptor.cs,
	  libsteticui/AssemblyResolver.cs,
	  libsteticui/CecilClassDescriptor.cs,
	  libsteticui/CecilWidgetLibrary.cs: New classes which allow loading
	  a widget library using cecil.
	* libsteticui/ProjectBackend.cs, libsteticui/Project.cs: Project
	  libraries are now stored in the project file. In this way it is
	  possible to generate code for projects which depend on other
	  libraries using the command line tool.
	* libsteticui/GuiDispatchServerSink.cs: Removed debug message.
	* libsteticui/CodeGenerator.cs: Avoid dependency on
	  TypeSignalDescriptor.
	* libsteticui/WidgetTreeCombo.cs, stetic/Stetic.cs: Misc fixes.
	* libsteticui/WidgetEditSession.cs, libsteticui/WidgetDesigner.cs: Some
	  protection to avoid dispatching some events after the object has
	  been disposed. Some fixes for the out-of-process mode.
	* libsteticui/Application.cs: Implemented method which determines if an
	  assembly is a widget library or not. Other misc fixes.
	* libsteticui/PaletteBackend.cs: Update the widget list when the