@@ -237,9 +237,9 @@ namespace Stetic.Editor
 
 			if (barItem) {
 				icon = null;
-			} else if (node.Action.Type == Action.ActionType.Radio) {
+			} else if (node.Action.Type == Stetic.Wrapper.Action.ActionType.Radio) {
 				icon = new CheckActionIcon (true, node.Action.Active);
-			} else if (node.Action.Type == Action.ActionType.Toggle) {
+			} else if (node.Action.Type == Stetic.Wrapper.Action.ActionType.Toggle) {
 				icon = new CheckActionIcon (node.Action.DrawAsRadio, node.Action.Active);
 			}
 				
@@ -373,19 +373,19 @@ namespace Stetic.Editor
 			
 			Gtk.CheckMenuItem item = new Gtk.CheckMenuItem (Catalog.GetString ("Action"));
 			item.DrawAsRadio = true;
-			item.Active = (node.Action.Type == Action.ActionType.Action);
+			item.Active = (node.Action.Type == Stetic.Wrapper.Action.ActionType.Action);
 			item.Activated += OnSetActionType;
 			menu.Insert (item, -1);
 			
 			item = new Gtk.CheckMenuItem (Catalog.GetString ("Radio Action"));
 			item.DrawAsRadio = true;
-			item.Active = (node.Action.Type == Action.ActionType.Radio);
+			item.Active = (node.Action.Type == Stetic.Wrapper.Action.ActionType.Radio);
 			item.Activated += OnSetRadioType;
 			menu.Insert (item, -1);
 			
 			item = new Gtk.CheckMenuItem (Catalog.GetString ("Toggle Action"));
 			item.DrawAsRadio = true;
-			item.Active = (node.Action.Type == Action.ActionType.Toggle);
+			item.Active = (node.Action.Type == Stetic.Wrapper.Action.ActionType.Toggle);
 			item.Activated += OnSetToggleType;
 			menu.Insert (item, -1);
 			
@@ -426,7 +426,7 @@ namespace Stetic.Editor
 		void OnSetToggleType (object ob, EventArgs args)
 		{
 			using (node.Action.UndoManager.AtomicChange) {
-				node.Action.Type = Action.ActionType.Toggle;
+				node.Action.Type = Stetic.Wrapper.Action.ActionType.Toggle;
 				node.Action.NotifyChanged ();
 			}
 		}
@@ -434,7 +434,7 @@ namespace Stetic.Editor
 		void OnSetRadioType (object ob, EventArgs args)
 		{
 			using (node.Action.UndoManager.AtomicChange) {
-				node.Action.Type = Action.ActionType.Radio;
+				node.Action.Type = Stetic.Wrapper.Action.ActionType.Radio;
 				node.Action.NotifyChanged ();
 			}
 		}
@@ -442,7 +442,7 @@ namespace Stetic.Editor
 		void OnSetActionType (object ob, EventArgs args)
 		{
 			using (node.Action.UndoManager.AtomicChange) {
-				node.Action.Type = Action.ActionType.Action;
+				node.Action.Type = Stetic.Wrapper.Action.ActionType.Action;
 				node.Action.NotifyChanged ();
 			}
 		}
